# src/dto/user.dto.ts
@@ -1,0 +1,5 @@
+export interface UpdateMyInfoDto {
+  name?: string;
+  phone?: string;
+  birth?: string;
+}
